// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-formatted-url default 1`] = `
<lightning-formatted-url>
  #shadow-root(open)
</lightning-formatted-url>
`;

exports[`lightning-formatted-url label changes 1`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="someIFrame"
      title="123"
    >
      https://foo/nns
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url label changes 2`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="someIFrame"
      title="123"
    >
      A label
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url label changes 3`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="someIFrame"
      title="123"
    >
      https://foo/nns
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url target changes 1`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="someIFrame"
    >
      https://foo/nns
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url target changes 2`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target=""
    >
      https://foo/nns
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url target changes 3`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="_blank"
    >
      https://foo/nns
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url tooltip changes 1`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="someIFrame"
      title="123"
    >
      https://foo/nns
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url tooltip changes 2`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="someIFrame"
      title=""
    >
      https://foo/nns
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url tooltip changes 3`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="someIFrame"
      title=""
    >
      123
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url url has ftp prefix 1`] = `
<lightning-formatted-url
  title="123"
>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="_blank"
    >
      https://foo/nns
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url url has http prefix 1`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="http://foo/nns"
      target="_blank"
    >
      http://foo/nns
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url url has https prefix 1`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="_blank"
    >
      https://foo/nns
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url url has title 1`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="_blank"
      title="123"
    >
      https://foo/nns
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url url has title, and target is _self 1`] = `
<lightning-formatted-url
  title="123"
>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="_self"
    >
      TheLabel
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url url has title, and target is a named iframe 1`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="https://foo/nns"
      target="someIFrame"
      title="123"
    >
      TheLabel
    </a>
</lightning-formatted-url>
`;

exports[`lightning-formatted-url url without prefix 1`] = `
<lightning-formatted-url>
  #shadow-root(open)
    <a
      href="http://foo/sss"
      target="_blank"
    >
      http://foo/sss
    </a>
</lightning-formatted-url>
`;
